Fix logo sizing for client section on tablets

--- a/src/sass/components/showcase/_clients.scss
+++ b/src/sass/components/showcase/_clients.scss
@@ -26,6 +26,9 @@
   background-color: white;
   padding: 8px;
   border-radius: 10px;
+  @include respond-to("medium") {
+    max-width: 10vw;
+  }
   @include respond-to("large") {
     max-width: 6vw;
   }
